# pygdrive

./: .gitignore  pyproject.toml  readme.md
pygdrive/: __init__.py  api.py  authentication.py  client.py  enums.py  exceptions.py  file.py  files.py  folder.py  object.py  permission.py  streamer.py  typed.py
pygdrive__old/: __init__.py  authentication.py  client.py  exceptions.py  file.py  folder.py  object.py  streamer.py  utils.py
