[tool.poetry]
name = "pygdrive"
version = "0.0.1"
description = ""
authors = ["Gleb Zhidkov <gleb@nuri.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygsheets = "^2.0.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
